nqueens single solution

--- a/BoardViewer.html
+++ b/BoardViewer.html
@@ -48,8 +48,8 @@
         //   [0, 0, 1, 0, 0, 0],
         // ]);
 
-        var n = 7;
-        displayBoard({'n': n});
+        var n = 5;
+        displayBoard(findNQueensSolution(n));
         findNRooksSolution(n);
         countNRooksSolutions(n);
         findNQueensSolution(n);
